@@ -23,12 +23,15 @@ library
   exposed-modules:   Network.Simple.TCP.TLS
   build-depends:     base              (>=4.5     && <5.0)
                    , bytestring        (>=0.9.2.1 && <0.11)
+                   , network           (>=2.3     && <2.5)
+                   -- Packages not in The Haskell Platform
                    , certificate       (>=1.3     && <1.4)
                    , crypto-random     (>=0.0     && <0.1)
-                   , network           (>=2.3     && <2.5)
-                   , network-simple    (>=0.2     && <0.3)
+                   , exceptions        (>=0.3     && <0.4)
+                   , network-simple    (>=0.3     && <0.4)
                    , tls               (>=1.1.4   && <1.2)
                    , tls-extra         (>=0.6.5   && <0.7)
+                   , transformers      (>=0.2     && <0.4)
 
   ghc-options:      -Wall -O2
   ghc-prof-options: -prof -fprof-auto-top
